--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,26 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .app {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15rem;
+  padding-top: 1rem;
+}
+.type-text,
+.text {
+  color: white;
+  font-size: 50px;
+}
+.button-container button {
+  margin: 0 5px;
+  padding: 4px 8px;
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
 }
